<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:text="FindMe"
            android:textSize="50dp"
            android:textStyle="bold"
            android:layout_marginBottom="30px"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back"
            android:hint="@string/hint_name"
            android:padding="5dp"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:paddingLeft="15dp"
            android:drawablePadding="10dp"/>
            <!--android:drawableLeft="@drawable/ic_fullname"-->


        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:paddingLeft="15dp"
            android:drawablePadding="10dp"/>
            <!--android:drawableLeft="@drawable/ic_mail"-->

        <EditText
            android:id="@+id/number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back"
            android:hint="@string/hint_number"
            android:inputType="phone"
            android:padding="5dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:paddingLeft="15dp"
            android:drawablePadding="10dp"/>
            <!--android:drawableLeft="@drawable/ic_phone"-->
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:paddingLeft="15dp"
            android:drawablePadding="10dp"/>
            <!--android:drawableLeft="@drawable/ic_pass"-->
        <EditText
            android:id="@+id/confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/back"
            android:hint="@string/hint_confirm"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:imeOptions="actionSend"
            android:textColorHint="@color/input_register_hint"
            android:paddingLeft="15dp"
            android:drawablePadding="10dp"/>
            <!--android:drawableLeft="@drawable/ic_pass"-->

        <Button
            android:id="@+id/btnLoadPhoto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#9e9e9e"
            android:text="@string/btn_load_photo"
            android:textColor="#111111" />

        <!-- Register Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_back"
            android:text="@string/btn_register"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>