<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:text="FindMe"
            android:textSize="50dp"
            android:textStyle="bold"
            android:layout_marginBottom="60px"
            />

        <TextView
            android:id="@+id/todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="Please enter a valid password"
            android:textSize="20dp"
            android:layout_marginBottom="20px"
            />

        <EditText
            android:id="@+id/passwordF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:paddingLeft="15dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_pass"/>
        <EditText
            android:id="@+id/confirmF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/back"
            android:hint="@string/hint_confirm"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:imeOptions="actionSend"
            android:textColorHint="@color/input_register_hint"
            android:paddingLeft="15dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_pass"/>


        <!-- Register Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_back"
            android:text="@string/btn_register"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>